pi-parser/test-data/snapshots/pi_parser__tests__parse_binops_int_plus.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  BinOp:
    x:
      node:
        IntLit:
          negative:
            node: false
            span:
              range:
                start: 0
                end: 1
              file_id: 0
          signed: true
          bits: 32
          val:
            node: 1
            span:
              range:
                start: 0
                end: 1
              file_id: 0
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    op: Plus
    y:
      node:
        IntLit:
          negative:
            node: false
            span:
              range:
                start: 2
                end: 3
              file_id: 0
          signed: true
          bits: 32
          val:
            node: 1
            span:
              range:
                start: 2
                end: 3
              file_id: 0
      span:
        range:
          start: 2
          end: 3
        file_id: 0
span:
  range:
    start: 0
    end: 3
  file_id: 0

