pi-parser/test-data/snapshots/pi_parser__tests__parse_ident.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  Ident: foo
span:
  range:
    start: 0
    end: 3
  file_id: 0

