pi-parser/test-data/snapshots/pi_parser__tests__parse_ident_nums.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  Ident: f0o
span:
  range:
    start: 0
    end: 3
  file_id: 0

