pi-parser/test-data/snapshots/pi_parser__tests__parse_ident_nums_seps.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  Ident: f0o_B8rr
span:
  range:
    start: 0
    end: 8
  file_id: 0

