pi-parser/test-data/snapshots/pi_parser__tests__parse_types_prims_f32.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  PrimitiveType: F32
span:
  range:
    start: 0
    end: 3
  file_id: 0

